# TeamTalk

./: .gitignore  README.md
android/app/src/main/java/com/mogujie/tt/imservice/manager/: IMContactManager.java  IMMessageManager.java
auto_setup/mariadb/conf/: ttopen.sql
docker/: Dockerfile  README.md
docker/supervisor_confs/: file_server.ini
ios/TeamTalk/Entity/: MTTDepartment.h  MTTDepartment.m  MTTUserEntity.m
ios/TeamTalk/GlobalData/RuntimeStatus/: RuntimeStatus.m
ios/TeamTalk/Module/Contacts/: ContactsModule.h  ContactsModule.m
ios/TeamTalk/Module/Login/: LoginModule.m
ios/TeamTalk/Module/Messages/: DDMessageModule.m
ios/TeamTalk/Module/TCPAPI/: DDDepartmentAPI.m  DDTcpProtocolHeader.h
ios/TeamTalk/Util/: MTTDatabaseUtil.h  MTTDatabaseUtil.m
ios/TeamTalk/ViewController/Contacts/: ContactsViewController.m  PublicProfileViewControll.m
pb/: create.sh  sync_project.sh
php/: .gitignore
php/application/config/: config.php  routes.php
php/application/controllers/: Admin.php  Apiv2.php  Auth.php  Depart.php  Discovery.php  Group.php  Home.php  Project.php  User.php
php/application/core/: BaseController.php  REST_Controller.php  TT_Controller.php  TT_Model.php
php/application/libraries/: Utils.php
php/application/models_b/: Project_model.php
php/application/views/auth/: login.php
server/src/: .gitignore  README.md  build.sh  build_server.sh  make_error_log4cxx.sh  ubuntu_install.md
server/src/base/: BaseSocket.cpp  BaseSocket.h  CMakeLists.txt  EncDec.cpp  EventDispatch.cpp  EventDispatch.h  EventFactoryInterface.h  EventInterface.h  EventSocket.cpp  EventSocket.h  HttpClient.cpp  HttpClient.h  HttpParserWrapper.cpp  HttpParserWrapper.h  ImPduBase.cpp  ImPduConn.cpp  ImPduConn.h  Lock.h  SSLSocket.cpp  SSLSocket.h  base_dep.cmake  im_conn_util.cpp  im_conn_util.h  imconn.cpp  imconn.h  log4z.cpp  log4z.h  netlib.cpp  netlib.h  util.cpp  util.h
server/src/db_proxy_server/: AutoPool.cpp  CMakeLists.txt  CachePool.cpp  CachePool.h  DBPool.cpp  DBPool.h  HandlerMap.cpp  ProxyConn.cpp  ProxyConn.h  ProxyTask.cpp  SyncCenter.cpp  SyncCenter.h  db_proxy_server.cpp  dbproxyserver.conf
server/src/db_proxy_server/business/: AudioModel.cpp  AudioModel.h  Common.h  DepartAction.cpp  DepartAction.h  DepartModel.cpp  DepartModel.h  ExterLogin.cpp  ExterLogin.h  FileAction.cpp  FileAction.h  FileModel.cpp  FileModel.h  GroupAction.cpp  GroupAction.h  GroupMessageModel.cpp  GroupMessageModel.h  GroupModel.cpp  GroupModel.h  InterLogin.cpp  InterLogin.h  Login.cpp  Login.h  MessageContent.cpp  MessageContent.h  MessageCounter.cpp  MessageCounter.h  MessageModel.cpp  MessageModel.h  RecentSession.cpp  RecentSession.h  RelationModel.cpp  RelationModel.h  SessionModel.cpp  SessionModel.h  UserAction.cpp  UserAction.h  UserModel.cpp  UserModel.h
server/src/file_server/: CMakeLists.txt  config_util.cpp  file_client_conn.cpp  file_client_conn.h  file_msg_server_conn.cpp  file_msg_server_conn.h  file_server.cpp  file_server_util.h  transfer_task.cpp  transfer_task.h  transfer_task_manager.cpp  transfer_task_manager.h
server/src/http_aiclient_server/: AiClient.cpp  AiClient.h  AiHttpConn.cpp  AiHttpConn.h  CMakeLists.txt  HttpConn.cpp  HttpConn.h  HttpPdu.cpp  HttpPdu.h  HttpQuery.cpp  HttpQuery.h  README.md  http_aiclient_server.cpp  httpaiclientserver.conf
server/src/http_msg_server/: AttachData.cpp  AttachData.h  CMakeLists.txt  DBServConn.cpp  DBServConn.h  HttpConn.cpp  HttpConn.h  HttpPdu.h  HttpQuery.cpp  HttpQuery.h  QueryHttpConn.cpp  QueryHttpConn.h  RouteServConn.cpp  RouteServConn.h  http_msg_server.cpp  httpmsgserver.conf
server/src/libsecurity/android/jni/: security.cpp
server/src/log4cxx/: locationinfo.cpp  loggingevent.cpp  objectoutputstream.cpp
server/src/login_server/: CMakeLists.txt  HttpConn.cpp  HttpConn.h  LoginConn.cpp  LoginConn.h  WorkHttpConn.cpp  WorkHttpConn.h  login_server.cpp  loginserver.conf
server/src/msfs/: CMakeLists.txt  FileManager.cpp  FileManager.h  HttpConn.cpp  HttpTaskConn.cpp  HttpTaskConn.h  main.cpp  msfs.conf
server/src/msg_server/: AttachData.cpp  AttachData.h  CMakeLists.txt  DBServConn.cpp  DBServConn.h  FileHandler.cpp  FileHandler.h  FileServConn.cpp  FileServConn.h  GroupChat.cpp  GroupChat.h  ImUser.cpp  ImUser.h  LoginServConn.cpp  LoginServConn.h  MsgConn.cpp  MsgConn.h  PushServConn.cpp  PushServConn.h  RouteServConn.cpp  RouteServConn.h  client_connect_impl.cpp  client_connect_impl.h  msg_server.cpp  msgserver.conf
server/src/push_server/: CMakeLists.txt  push_app.cpp
server/src/route_server/: CMakeLists.txt  RouteConn.cpp  RouteConn.h  route_server.cpp
server/src/slog/: CMakeLists.txt
server/src/test/: Client.cpp  ClientConn.cpp  ClientConn.h  IPacketCallback.h  SeqAlloctor.h  test_client.cpp
server/src/test_client/: .gitignore  Client.h  ClientConn.cpp  ClientConn.h  Makefile  README.md  SeqAlloctor.cpp  test_client.cpp
server/src/tools/: daeml
server/src/websocket_server/: .gitignore  CMakeLists.txt  WebSocketConn.cpp  WebSocketConn.h  websocket_server.cpp
server/src/websocket_server/websocket/: CMakeLists.txt
