cmake_minimum_required(VERSION 2.8.12)
PROJECT(Base)
AUX_SOURCE_DIRECTORY(./ SRC_LIST1)
AUX_SOURCE_DIRECTORY(./pb/protocol SRC_LIST2)
AUX_SOURCE_DIRECTORY(./jsoncpp SRC_LIST3)

include(${PROJECT_SOURCE_DIR}/../base/base_dep.cmake)
INCLUDE_DIRECTORIES(./)
#LINK_DIRECTORIES(${PB_LIB_DIR} ${SLOG_LIB_DIR} ${OPENSSL_LIB_DIR})
SET(LIBRARY_OUTPUT_PATH ./)
ADD_LIBRARY(base STATIC ${SRC_LIST1} ${SRC_LIST2} ${SRC_LIST3})

#ADD_XXXX必须在TARGET_LINK_LIBRARIES前面，否则会报错
#ADD_LIBRARY(${PROJECTNAME} SHARED ${SRC_LIST})
#ADD_EXECUTABLE(${PROJECTNAME} ${SRC_LIST})

TARGET_LINK_LIBRARIES(base pthread slog crypto ssl)
