cmake_minimum_required(VERSION 2.8.12)
PROJECT(slog)
AUX_SOURCE_DIRECTORY(./ SRC_LIST)
SET(CMAKE_MACOSX_RPATH 1)
SET(LIBRARY_OUTPUT_PATH .)

SET(LOG4CXX_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/../third_party/log4cxx/include)
SET(LOG4CXX_LIB_DIR ${PROJECT_SOURCE_DIR}/../third_party/log4cxx/lib)

SET(CMAKE_CXX_STANDARD 14)
ADD_DEFINITIONS( -g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
-DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
-DAC_HAS_DEBUG -DLINUX_DAEMON)

INCLUDE_DIRECTORIES(./ ${LOG4CXX_INCLUDE_DIR})
LINK_DIRECTORIES(${LOG4CXX_LIB_DIR})


#ADD_XXXX必须在TARGET_LINK_LIBRARIES前面，否则会报错
#ADD_LIBRARY(${PROJECTNAME} SHARED/STATIC ${SRC_LIST})
#ADD_EXECUTABLE(slog ${SRC_LIST})
ADD_LIBRARY(slog SHARED ${SRC_LIST})

TARGET_LINK_LIBRARIES(slog log4cxx)
 
